<resources>
    <string name="app_name">Free 2Play Games</string>
    <string name="game_thumbnail_image">Game thumbnail image</string>
    <string name="menu_refresh">refresh list</string>
    <string name="game_thumbnail">Game thumbnail</string>
    <string name="play_now">Play now</string>
    <string name="dummy_text_description">For the first time ever, a free-to-play Halo experience is available in the form of Halo Infinite’s multiplayer. 343 Industries and Xbox Game Studios made the multiplayer version of the game available separately from the full story campaign, which is available to purchase for $60 to allow everyone to get in on the action. With the multiplayer, players can take part in two different modes: Arena and Big Team Battle. The first returns to Halo’s multiplayer roots with on-map equipment and 4-player squads. Big Team Battle allows players to mix and match weapons, vehicles and equipment to create a unique combat experience. The game also offers players the ability to customize their Spartan with cosmetic items. Of course, those with the campaign will have access to extra options. Even more can be found in the game’s battle pass which also introduces new modes and maps, as well as community-focused content.</string>
    <string name="additional_information">Additional Information</string>
    <string name="minimum_system_requirements">Minimum System Requirements</string>
    <string name="profile_page">Profile page</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>
    <string name="graphics">Graphics</string>
    <string name="processor">Processor</string>
    <string name="storage">Storage</string>
    <string name="memory">Memory</string>
    <string name="os">OS</string>
    <string name="Unknown">Unknown</string>
    <string name="navigate_back_cd">Navigate back</string>
    <!--    Error handling text-->
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="try_again">Try again</string>
    <string name="text_yes">yes</string>
    <!--    Custom errors-->
    <string name="unknown_error">An unknown error occurred!</string>
    <string name="unable_to_retrieve_id_for_this_game">Unable to retrieve id for this game! \nnavigate back and try again!</string>
    <string name="NETWORK_TIMEOUT_ERROR">Network call took too long!\nCheck your internet connection</string>
    <string name="NETWORK_UNKNOWN_ERROR">While making calls to the network something unexpected happened!\nCheck your internet connection</string>
    <string name="NETWORK_CONNECTION_ERROR">There is problem while connecting to the network! \nCheck your internet connection</string>
    <string name="game_thumbnail_image_description">Game thumbnail image</string>
    <string name="retry">Retry</string>
    <string name="network_error_message">Unable to fetch games.\nCheck your network connection and try again.</string>
    <string name="sort">Sort</string>
    <string name="popularity">Popularity</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="relevance">Relevance</string>
    <string name="newest">Newest</string>
    <string name="sorted_by">Sorted by %s</string>
    <string name="sorted_by_">"Sorted by "</string>
    <string name="cancel">Cancel</string>
</resources>