<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_game_detail"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?colorPrimary"
            app:navigationContentDescription="@string/navigate_back_cd"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:titleTextColor="?colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_game_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <ScrollView
            android:id="@+id/scroll_main_game_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vpg_game_images"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/game_thumbnail"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vpg_game_images">

                    <Button
                        android:id="@+id/btn_profile_page"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginEnd="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/profile_page"
                        app:layout_constraintEnd_toStartOf="@id/btn_play_now"
                        app:layout_constraintHorizontal_weight="40"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_play_now"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/play_now"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="60"
                        app:layout_constraintStart_toEndOf="@id/btn_profile_page"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_game_description_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/material_on_surface_emphasis_high_type"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_play_now"
                        tools:text="About Halo Infinite" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_txt_game_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:elevation="8dp"
                        android:padding="8dp"
                        app:cardBackgroundColor="@color/detail_cards_background"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_game_description_header">

                        <TextView
                            android:id="@+id/txt_game_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:textColor="@color/material_on_surface_emphasis_medium"
                            android:textSize="20sp"
                            android:textStyle="normal"
                            tools:text="@string/dummy_text_description" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txt_game_additional_information_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/additional_information"
                        android:textColor="@color/material_on_surface_emphasis_high_type"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/card_view_txt_game_description" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_additional_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:elevation="8dp"
                        android:padding="8dp"
                        app:cardBackgroundColor="@color/detail_cards_background"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_game_additional_information_header">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <include
                                    android:id="@+id/game_title_box"
                                    layout="@layout/layout_text_subtext_box"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="4dp"
                                    android:layout_weight="5" />

                                <include
                                    android:id="@+id/game_developer_box"
                                    layout="@layout/layout_text_subtext_box"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_weight="5" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <include
                                    android:id="@+id/game_publisher_box"
                                    layout="@layout/layout_text_subtext_box"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="4dp"
                                    android:layout_weight="5" />

                                <include
                                    android:id="@+id/game_release_date_box"
                                    layout="@layout/layout_text_subtext_box"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_weight="5" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <include
                                    android:id="@+id/game_genre_box"
                                    layout="@layout/layout_text_subtext_box"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="4dp"
                                    android:layout_weight="5" />

                                <include
                                    android:id="@+id/game_platform_box"
                                    layout="@layout/layout_text_subtext_box"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_weight="5" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/txt_game_minimum_system_requirements_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/minimum_system_requirements"
                        android:textColor="@color/material_on_surface_emphasis_high_type"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/card_view_additional_information" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_minimum_system_requirements"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:elevation="8dp"
                        android:padding="8dp"
                        app:cardBackgroundColor="@color/detail_cards_background"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_game_minimum_system_requirements_header">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <include
                                android:id="@+id/game_processor_box"
                                layout="@layout/layout_text_subtext_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <include
                                android:id="@+id/game_graphics_box"
                                layout="@layout/layout_text_subtext_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />


                            <include
                                android:id="@+id/game_memory_box"
                                layout="@layout/layout_text_subtext_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <include
                                android:id="@+id/game_storage_box"
                                layout="@layout/layout_text_subtext_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <include
                                android:id="@+id/game_os_box"
                                layout="@layout/layout_text_subtext_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>